# policy-reporter-fsm

./: .gitignore  README.md  pyproject.toml  run_example.py
examples/: __init__.py  mod_three.py
src/fsm/: __init__.py  automaton.py  exceptions.py
tests/: __init__.py  conftest.py  test_automaton.py  test_mod_three.py
